--- a/pages/19495.html
+++ b/pages/19495.html
@@ -309,14 +309,16 @@ margin-left: 0em;
 <div id="revision">
     <h2 id='idea'>Idea</h2>
 
-<p>An <a class='existingWikiWord' href='/nlab/show/EI-category'>EI (∞,1)-category</a> is an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> in which every <a class='existingWikiWord' href='/nlab/show/endomorphism'>endomorphism</a> is an <a class='existingWikiWord' href='/nlab/show/equivalence'>equivalence</a>. There is then an ordering <math class='maruku-mathml' display='inline' id='mathml_28f0c8d49710467af9dc5f2bc65b172209bc01d8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>≺</mo></mrow><annotation encoding='application/x-tex'>\prec</annotation></semantics></math> on the equivalence classes of objects, where x≺y means that there is a noninvertible map <math class='maruku-mathml' display='inline' id='mathml_28f0c8d49710467af9dc5f2bc65b172209bc01d8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi><mo>→</mo><mi>x</mi></mrow><annotation encoding='application/x-tex'>y \to x</annotation></semantics></math>.</p>
+<p>An <a class='existingWikiWord' href='/nlab/show/EI-category'>EI (∞,1)-category</a> is an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> in which every <a class='existingWikiWord' href='/nlab/show/endomorphism'>endomorphism</a> is an <a class='existingWikiWord' href='/nlab/show/equivalence'>equivalence</a>. There is then an ordering <math class='maruku-mathml' display='inline' id='mathml_ac356833c61cee7b8ceed39ff98b44602d0fc831_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>≺</mo></mrow><annotation encoding='application/x-tex'>\prec</annotation></semantics></math> on the equivalence classes of objects, where x≺y means that there is a noninvertible map <math class='maruku-mathml' display='inline' id='mathml_ac356833c61cee7b8ceed39ff98b44602d0fc831_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi><mo>→</mo><mi>x</mi></mrow><annotation encoding='application/x-tex'>y \to x</annotation></semantics></math>.</p>
 
-<p>An <strong>inverse EI (∞,1)-category</strong> is an EI (∞,1)-category which is also an <a class='existingWikiWord' href='/nlab/show/direct+category'>inverse</a> (∞,1)-category, that is, is such that <math class='maruku-mathml' display='inline' id='mathml_28f0c8d49710467af9dc5f2bc65b172209bc01d8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>≺</mo></mrow><annotation encoding='application/x-tex'>\prec</annotation></semantics></math> is well-founded, i.e., there are no infinite chains of noninvertible maps <math class='maruku-mathml' display='inline' id='mathml_28f0c8d49710467af9dc5f2bc65b172209bc01d8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>→</mo><mo>→</mo><mo>→</mo><mi>⋯</mi></mrow><annotation encoding='application/x-tex'> \to \to \to \cdots</annotation></semantics></math>.</p>
+<p>An <strong>inverse EI (∞,1)-category</strong> is an EI (∞,1)-category which is also an <a class='existingWikiWord' href='/nlab/show/direct+category'>inverse</a> (∞,1)-category, that is, is such that <math class='maruku-mathml' display='inline' id='mathml_ac356833c61cee7b8ceed39ff98b44602d0fc831_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>≺</mo></mrow><annotation encoding='application/x-tex'>\prec</annotation></semantics></math> is well-founded, i.e., there are no infinite chains of noninvertible maps <math class='maruku-mathml' display='inline' id='mathml_ac356833c61cee7b8ceed39ff98b44602d0fc831_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>→</mo><mo>→</mo><mo>→</mo><mi>⋯</mi></mrow><annotation encoding='application/x-tex'> \to \to \to \cdots</annotation></semantics></math>.</p>
 
 <h2 id='examples'>Examples</h2>
 
 <ul>
-<li>For a compact Lie group <math class='maruku-mathml' display='inline' id='mathml_28f0c8d49710467af9dc5f2bc65b172209bc01d8_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> the opposite of the <a class='existingWikiWord' href='/nlab/show/orbit+category'>orbit category</a>.</li>
+<li>For a <a class='existingWikiWord' href='/nlab/show/compact+Lie+group'>compact Lie group</a> <math class='maruku-mathml' display='inline' id='mathml_ac356833c61cee7b8ceed39ff98b44602d0fc831_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> the opposite of the <a class='existingWikiWord' href='/nlab/show/orbit+category'>orbit category</a>.</li>
+
+<li>The category of finite sets and surjective maps.</li>
 </ul>
 
 <h2 id='related_concepts'>Related concepts</h2>
@@ -334,14 +336,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July  1, 2018 at 06:07:15.
+  Last revised on July  1, 2018 at 09:39:36.
   See the <a href="https://ncatlab.org/nlab/history/inverse EI (∞,1)-category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/inverse+EI+%28%E2%88%9E%2C1%29-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/inverse+EI+%28%E2%88%9E%2C1%29-category/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/inverse+EI+%28%E2%88%9E%2C1%29-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/inverse+EI+%28%E2%88%9E%2C1%29-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/inverse+EI+%28%E2%88%9E%2C1%29-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/inverse+EI+%28%E2%88%9E%2C1%29-category/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/inverse+EI+%28%E2%88%9E%2C1%29-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/inverse+EI+%28%E2%88%9E%2C1%29-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/inverse EI (∞,1)-category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
