--- a/pages/10078.html
+++ b/pages/10078.html
@@ -316,7 +316,7 @@ margin-left: 0em;
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative</a>, <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>on curved spacetimes</a>, <a class='existingWikiWord' href='/nlab/show/homotopical+algebraic+quantum+field+theory'>homotopical</a>)</p>
 
-<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>Introduction</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+perturbative+quantum+field+theory'>Introduction</a></p>
 
 <h2 id='concepts'>Concepts</h2>
 
@@ -817,7 +817,7 @@ margin-left: 0em;
 
 <p>One may think of this as making explicit the <a class='existingWikiWord' href='/nlab/show/edge'>edges</a> in a [[Feynman diagram] as corresponding to <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual particles</a>].</p>
 
-<p>Mathematically the key step here is a <a class='existingWikiWord' href='/nlab/show/Mellin+transform'>Mellin transform</a> – introducing a “<a class='existingWikiWord' href='/nlab/show/Mellin+transform'>Schwinger parameter</a>” – which realizes the <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a> <math class='maruku-mathml' display='inline' id='mathml_718120b74a8b995979677c4510f90a1adcc346ff_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Δ</mi> <mi>F</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Delta_F(x,y)</annotation></semantics></math> as a <a class='existingWikiWord' href='/nlab/show/path+integral'>path integral</a> for a <a class='existingWikiWord' href='/nlab/show/relativistic+particle'>relativistic particle</a> travelling from <math class='maruku-mathml' display='inline' id='mathml_718120b74a8b995979677c4510f90a1adcc346ff_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_718120b74a8b995979677c4510f90a1adcc346ff_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math>.</p>
+<p>Mathematically the key step here is a <a class='existingWikiWord' href='/nlab/show/Mellin+transform'>Mellin transform</a> – introducing a “<a class='existingWikiWord' href='/nlab/show/Mellin+transform'>Schwinger parameter</a>” – which realizes the <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a> <math class='maruku-mathml' display='inline' id='mathml_94ef4f975406085593800adca8111311c4a8c555_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Δ</mi> <mi>F</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Delta_F(x,y)</annotation></semantics></math> as a <a class='existingWikiWord' href='/nlab/show/path+integral'>path integral</a> for a <a class='existingWikiWord' href='/nlab/show/relativistic+particle'>relativistic particle</a> travelling from <math class='maruku-mathml' display='inline' id='mathml_94ef4f975406085593800adca8111311c4a8c555_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_94ef4f975406085593800adca8111311c4a8c555_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math>.</p>
 
 <p>This worldline formalism is equivalent to the traditional formulation. It has the conceptual advantage that it expresses the <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a> of <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> manifestly as a <a class='existingWikiWord' href='/nlab/show/second+quantization'>second quantization</a> of its particle content given explicitly as the <a class='existingWikiWord' href='/nlab/show/superposition'>superposition</a> of all 1-particle processes.</p>
 
@@ -945,6 +945,10 @@ margin-left: 0em;
 <li>
 <p>Peng Dai, <a class='existingWikiWord' href='/nlab/show/Warren+Siegel'>Warren Siegel</a>, <em>Worldline Green Functions for Arbitrary Feynman Diagrams</em>, Nucl.Phys.B770:107-122,2007 (<a href='https://arxiv.org/abs/hep-th/0608062'>arXiv:hep-th/0608062</a>)</p>
 </li>
+
+<li>
+<p>S. A. Franchino-Viñas, S. Mignemi, <em>Worldline Formalism in Snyder Spaces</em> (<a href='https://arxiv.org/abs/1806.11467'>arXiv:1806.11467</a>)</p>
+</li>
 </ul>
 
 <p>A list of more literature is at</p>
@@ -967,14 +971,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on May 15, 2018 at 08:16:17.
+  Last revised on July  2, 2018 at 04:19:43.
   See the <a href="https://ncatlab.org/nlab/history/worldline formalism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/worldline+formalism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/worldline+formalism/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/worldline+formalism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/worldline+formalism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/worldline+formalism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/worldline+formalism/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/worldline+formalism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/worldline+formalism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/worldline formalism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
