--- a/pages/11818.html
+++ b/pages/11818.html
@@ -311,19 +311,25 @@ margin-left: 0em;
 <li><a href='https://www.math.u-bordeaux.fr/~bmorin/'>webpage</a></li>
 </ul>
 
+<h2 id='publications'>Publications</h2>
+
+<ul>
+<li><em>Utilisation d’une cohomologie étale équivariante en topologie arithmétique</em> Compositio Math. 144 (2008), no. 1, 32-60.</li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July  2, 2018 at 05:38:13.
+  Last revised on July  2, 2018 at 06:38:18.
   See the <a href="https://ncatlab.org/nlab/history/Baptiste Morin" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Baptiste+Morin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Baptiste+Morin/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Baptiste+Morin" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Baptiste+Morin" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Baptiste+Morin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Baptiste+Morin/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Baptiste+Morin" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Baptiste+Morin" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Baptiste Morin/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
