--- a/pages/4070.html
+++ b/pages/4070.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1295/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -528,7 +527,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Dennis+Gaitsgory'>Dennis Gaitsgory</a>, <em>Noted on 2d conformal field theory and string theory</em>, from p. 1017 on in</p>
+<p><a class='existingWikiWord' href='/nlab/show/Dennis+Gaitsgory'>Dennis Gaitsgory</a>, <em>Notes on 2d conformal field theory and string theory</em>, from p. 1017 on in</p>
 
 <p><a class='existingWikiWord' href='/nlab/show/Pierre+Deligne'>Pierre Deligne</a>, <a class='existingWikiWord' href='/nlab/show/Pavel+Etingof'>P. Etingof</a>, <a class='existingWikiWord' href='/nlab/show/Daniel+Freed'>D. Freed</a>, L. Jeffrey, <a class='existingWikiWord' href='/nlab/show/David+Kazhdan'>D. Kazhdan</a>, J. Morgan, D.R. Morrison and <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, eds. , <em><a class='existingWikiWord' href='/nlab/show/Quantum+Fields+and+Strings'>Quantum Fields and Strings</a>, A course for mathematicians</em>, 2 vols. Amer. Math. Soc. Providence 1999. (<a href='http://www.math.ias.edu/qft'>web version</a>)</p>
 </li>
@@ -551,19 +550,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March  6, 2015 14:22:54 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.113.30.252)
+  <p>
+  Last revised on July  2, 2018 at 10:19:30.
+  See the <a href="https://ncatlab.org/nlab/history/chiral algebra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/chiral+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/chiral+algebra/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/chiral+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/chiral+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/chiral+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/chiral+algebra/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/chiral+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/chiral+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/chiral algebra/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/chiral+algebra" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/chiral+algebra" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/chiral+algebra" id="view_source" rel="nofollow">Source</a>
